[feat] swagger 수정
